tests/negative/RepeatedNameSignature.juvix
module RepeatedNameSignature;

type T := t : T;

f (a : T) {b : T} : (a : T) -> T
 | a := t;
